[package]
name = "netsnmp"
version = "0.1.0"
authors = ["Maarten Deprez <mdp@continuousc.eu>"]
license = "Apache-2.0"
edition = "2021"
repository = "ssh://git@sigit01/~/Development/Agents/NetSNMP-rs"
description = "NetSNMP bindings for rust"
publish = [ "si" ]

[features]
default = ["bindgen", "tokio"]

[build-dependencies]
bindgen = { version = "0.71", optional = true }

[dependencies]
tokio        = { version = "1", features = ["full"], optional = true }
serde        = { version = "1.0", features = ["derive"] }
pin-project  = "1.1.9"
thiserror    = "1.0"
mio          = "1.0"
log          = "0.4"

# rule-engine = { registry = "si", version = "0.1.22", optional = true }
